literature review: sec 1.1.2 update

--- a/QuantEst/thesis/Bibliography.bib
+++ b/QuantEst/thesis/Bibliography.bib
@@ -227,6 +227,24 @@
   number = {3}
 }
 
+@incollection{gilbertChapter40How2002,
+  title = {Chapter 40 - {{How}} to {{Summarize}} the {{Universe}}: {{Dynamic Maintenance}} of {{Quantiles}}},
+  shorttitle = {Chapter 40 - {{How}} to {{Summarize}} the {{Universe}}},
+  booktitle = {{{VLDB}} '02: {{Proceedings}} of the 28th {{International Conference}} on {{Very Large Databases}}},
+  author = {Gilbert, Anna C. and Kotidis, Yannis and Muthukrishnan, S. and Strauss, Martin J.},
+  editor = {Bernstein, Philip A. and Ioannidis, Yannis E. and Ramakrishnan, Raghu and Papadias, Dimitris},
+  year = {2002},
+  month = jan,
+  pages = {454--465},
+  publisher = {{Morgan Kaufmann}},
+  address = {{San Francisco}},
+  doi = {10.1016/B978-155860869-6/50047-0},
+  abstract = {This chapter presents a new algorithm for dynamically computing quantiles of a relation subject to insert as well as delete operations. Order statistics (quantiles) are frequently used in databases at both the database server as well as the application level. For example, they are useful in selectivity estimation during query optimization, in partitioning large relations, in estimating query result sizes when building user interfaces, and in characterizing the data distribution of evolving datasets in the process of data mining. Most database management systems (DBMSs) maintain order statistics (quantiles) on the contents of their database relations. Medians (half-way points) and quartiles (quarter-way points) are elementary order statistics. Quantiles find multiple uses in databases. Simple statistics, such as the mean and variance, are both insufficiently descriptive and highly sensitive to data anomalies in real world data distributions. Quantiles can summarize massive database relations more robustly. Many commercial DBMSs use equidepth histograms, which are in fact quantiles, during query optimization in order to estimate the size of intermediate results and pick competitive query execution plans.},
+  file = {/Users/sue/Zotero/storage/RI5CWZXP/B9781558608696500470.html},
+  isbn = {978-1-55860-869-6},
+  language = {en}
+}
+
 @incollection{greenwaldQuantilesEquidepthHistograms2016a,
   title = {Quantiles and {{Equi}}-Depth {{Histograms}} over {{Streams}}},
   booktitle = {Data {{Stream Management}}},
