literature review: sec 1.1.2 done

--- a/QuantEst/thesis/Bibliography.bib
+++ b/QuantEst/thesis/Bibliography.bib
@@ -155,21 +155,6 @@
   abstract = {Streaming approximate histograms with Python. Contribute to carsonfarmer/streamhist development by creating an account on GitHub.}
 }
 
-@article{felberRandomizedOnlineQuantile2015,
-  title = {A Randomized Online Quantile Summary in \${{O}}(\textbackslash{}frac\{1\}\{\textbackslash{}varepsilon\} \textbackslash{}log \textbackslash{}frac\{1\}\{\textbackslash{}varepsilon\})\$ Words},
-  author = {Felber, David and Ostrovsky, Rafail},
-  year = {2015},
-  month = mar,
-  abstract = {A quantile summary is a data structure that approximates to \$\textbackslash{}varepsilon\$-relative error the order statistics of a much larger underlying dataset. In this paper we develop a randomized online quantile summary for the cash register data input model and comparison data domain model that uses \$O(\textbackslash{}frac\{1\}\{\textbackslash{}varepsilon\} \textbackslash{}log \textbackslash{}frac\{1\}\{\textbackslash{}varepsilon\})\$ words of memory. This improves upon the previous best upper bound of \$O(\textbackslash{}frac\{1\}\{\textbackslash{}varepsilon\} \textbackslash{}log\^\{3/2\} \textbackslash{}frac\{1\}\{\textbackslash{}varepsilon\})\$ by Agarwal et. al. (PODS 2012). Further, by a lower bound of Hung and Ting (FAW 2010) no deterministic summary for the comparison model can outperform our randomized summary in terms of space complexity. Lastly, our summary has the nice property that \$O(\textbackslash{}frac\{1\}\{\textbackslash{}varepsilon\} \textbackslash{}log \textbackslash{}frac\{1\}\{\textbackslash{}varepsilon\})\$ words suffice to ensure that the success probability is \$1 - e\^\{-\textbackslash{}text\{poly\}(1/\textbackslash{}varepsilon)\}\$.},
-  archivePrefix = {arXiv},
-  eprint = {1503.01156},
-  eprinttype = {arxiv},
-  file = {/Users/sue/Zotero/storage/KWQTKF88/Felber and Ostrovsky - 2015 - A randomized online quantile summary in $O(frac 1.pdf;/Users/sue/Zotero/storage/EN3DC5XG/1503.html},
-  journal = {arXiv:1503.01156 [cs]},
-  keywords = {Computer Science - Data Structures and Algorithms},
-  primaryClass = {cs}
-}
-
 @article{felberRandomizedOnlineQuantile2017,
   title = {A Randomized Online Quantile Summary in {{O}}((1/Epsilon)Log(1/Epsilon)) Words},
   author = {Felber, David and Ostrovsky, Rafail},
@@ -335,6 +320,14 @@
   abstract = {We address the online anomalous time series detection problem among a set of series, combining three simple distance measures. This approach, akin to control charts, makes it easy to determine when a series begins to differ from other series. Empirical evidence shows that this novel online anomalous time series detection algorithm performs very well, while being efficient in terms of time complexity, when compared to approaches previously discussed in the literature.},
   file = {/Users/sue/Zotero/storage/YGGN44NJ/Huang et al. - 2013 - An Online Anomalous Time Series Detection Algorith.pdf},
   isbn = {978-3-642-38576-6 978-3-642-38577-3},
+  language = {en}
+}
+
+@article{hungBoundFindingEApproximate,
+  title = {Bound for {{Finding}} {$\epsilon$}-{{Approximate Quantiles}} in a {{Data Stream}}},
+  author = {Hung, Regant Y S and Ting, Hingfung F},
+  pages = {12},
+  file = {/Users/sue/Zotero/storage/R6ZUL7DP/Hung and Ting - Bound for Finding ε-Approximate Quantiles in a Dat.pdf},
   language = {en}
 }
 
