Bib: more fixes

--- a/QuantEst/thesis/Bibliography.bib
+++ b/QuantEst/thesis/Bibliography.bib
@@ -579,19 +579,22 @@
   language = {en}
 }
 
-@article{shrivastavaMediansNewAggregation2004,
-  title = {Medians and {{Beyond}}: {{New Aggregation Techniques}} for {{Sensor Networks}}},
-  shorttitle = {Medians and {{Beyond}}},
+@inproceedings{shrivastavaMediansNewAggregation2004b,
+  title = {Medians and beyond: New Aggregation Techniques for Sensor Networks},
+  shorttitle = {Medians and Beyond},
+  booktitle = {Proceedings of the 2nd International Conference on {{Embedded}} Networked Sensor Systems},
   author = {Shrivastava, Nisheeth and Buragohain, Chiranjeeb and Agrawal, Divyakant and Suri, Subhash},
   year = {2004},
-  month = aug,
-  abstract = {Wireless sensor networks offer the potential to span and monitor large geographical areas inexpensively. Sensors, however, have significant power constraint (battery life), making communication very expensive. Another important issue in the context of sensor-based information systems is that individual sensor readings are inherently unreliable. In order to address these two aspects, sensor database systems like TinyDB and Cougar enable in-network data aggregation to reduce the communication cost and improve reliability. The existing data aggregation techniques, however, are limited to relatively simple types of queries such as SUM, COUNT, AVG, and MIN/MAX. In this paper we propose a data aggregation scheme that significantly extends the class of queries that can be answered using sensor networks. These queries include (approximate) quantiles, such as the median, the most frequent data values, such as the consensus value, a histogram of the data distribution, as well as range queries. In our scheme, each sensor aggregates the data it has received from other sensors into a fixed (user specified) size message. We provide strict theoretical guarantees on the approximation quality of the queries in terms of the message size. We evaluate the performance of our aggregation scheme by simulation and demonstrate its accuracy, scalability and low resource utilization for highly variable input data sets.},
-  archivePrefix = {arXiv},
-  eprint = {cs/0408039},
-  eprinttype = {arxiv},
-  file = {/Users/sue/Zotero/storage/DX9KFSRT/Shrivastava et al. - 2004 - Medians and Beyond New Aggregation Techniques for.pdf;/Users/sue/Zotero/storage/WZHWV3VD/0408039.html},
-  journal = {arXiv:cs/0408039},
-  keywords = {Computer Science - Data Structures and Algorithms,Computer Science - Databases,Computer Science - Distributed; Parallel; and Cluster Computing}
+  month = nov,
+  pages = {239--249},
+  publisher = {{Association for Computing Machinery}},
+  address = {{Baltimore, MD, USA}},
+  doi = {10.1145/1031495.1031524},
+  abstract = {Wireless sensor networks offer the potential to span and monitor large geographical areas inexpensively. Sensors, however, have significant power constraint (battery life), making communication very expensive. Another important issue in the context of sensor-based information systems is that individual sensor readings are inherently unreliable. In order to address these two aspects, sensor database systems like TinyDB and Cougar enable in-network data aggregation to reduce the communication cost and improve reliability. The existing data aggregation techniques, however, are limited to relatively simple types of queries such as SUM, COUNT, AVG, and MIN/MAX. In this paper we propose a data aggregation scheme that significantly extends the class of queries that can be answered using sensor networks. These queries include (approximate) quantiles, such as the median, the most frequent data values, such as the \emph{consensus} value, a histogram of the data distribution, as well as range queries. In our scheme, each sensor aggregates the data it has received from other sensors into a fixed (user specified) size message. We provide strict theoretical guarantees on the approximation quality of the queries in terms of the message size. We evaluate the performance of our aggregation scheme by simulation and demonstrate its accuracy, scalability and low resource utilization for highly variable input data sets.},
+  file = {/Users/sue/Zotero/storage/MRU4VVRD/Shrivastava et al. - 2004 - Medians and beyond new aggregation techniques for.pdf},
+  isbn = {978-1-58113-879-5},
+  keywords = {aggregation,approximation algorithms,distributed algorithms,sensor networks},
+  series = {{{SenSys}} '04}
 }
 
 @article{steinwartEstimatingConditionalQuantiles2011,
