Literature review: update

--- a/QuantEst/thesis/Bibliography.bib
+++ b/QuantEst/thesis/Bibliography.bib
@@ -81,6 +81,23 @@
   file = {/Users/sue/Zotero/storage/3XJDLJVX/ency.pdf}
 }
 
+@inproceedings{caoIncrementalTrackingMultiple2009,
+  title = {Incremental Tracking of Multiple Quantiles for Network Monitoring in Cellular Networks},
+  booktitle = {Proceedings of the 1st {{ACM}} Workshop on {{Mobile}} Internet through Cellular Networks},
+  author = {Cao, Jin and Li, Li Erran and Chen, Aiyou and Bu, Tian},
+  year = {2009},
+  month = sep,
+  pages = {7--12},
+  publisher = {{Association for Computing Machinery}},
+  address = {{Beijing, China}},
+  doi = {10.1145/1614255.1614258},
+  abstract = {Network monitoring in cellular networks requires the tracking of quantiles for data distributions of many evolving network measurements (e.g. number of high signaling subscribers per minute). Most quantile estimation algorithms are based on a summary of the empirical data distribution, using either a representative sample or a global approximation of the entire distribution. In contrast, by viewing data as a quantity from a random distribution, the stochastic approximation (SA) for quantile estimation does not keep a global approximation, but rather local approximations at the quantiles of interest, and therefore uses negligible memory even for estimating tail quantiles. However, the current stochastic approximation algorithm for quantile estimation tracks each quantile separately, and this may lead to a violation of the monotone property of quantiles. In this paper, we propose a stochastic approximation technique that enables the simultaneous tracking of multiple quantiles. Our technique maintains the monotone property of different quantiles, and is adaptive to changes in the data distribution. We evaluate its performance using real cellular provider datasets. Our results show that the technique is very efficient.},
+  file = {/Users/sue/Zotero/storage/8V9YUW42/Cao et al. - 2009 - Incremental tracking of multiple quantiles for net.pdf},
+  isbn = {978-1-60558-753-0},
+  keywords = {cellular networks,quantile estimation,stochastic approximation},
+  series = {{{MICNET}} '09}
+}
+
 @article{cormodeImprovedDataStream2005,
   title = {An Improved Data Stream Summary: The Count-Min Sketch and Its Applications},
   shorttitle = {An Improved Data Stream Summary},
